objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Contact Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Phone ) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( Email) = 0, &quot;Email, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( MailingStreet ) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Title) = 0, &quot;Job Title, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Salutation,&quot;&quot;), &quot;Salutation&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN( Phone) = 0, 0,20) + IF( LEN( Email) = 0, 0,20) + IF( LEN(MailingStreet) = 0, 0,20) + IF( LEN(Title) = 0, 0,20) + IF( ISPICKVAL(Salutation,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Apelido__c</fullName>
        <label>Apelido</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Bairro__c</fullName>
        <label>Bairro</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Baixou_aplicativo__c</fullName>
        <label>Baixou aplicativo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_CEP__c</fullName>
        <label>CEP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_CNPJ__c</fullName>
        <externalId>true</externalId>
        <label>CNPJ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_CPF__c</fullName>
        <externalId>true</externalId>
        <label>CPF</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Cidade__c</fullName>
        <label>Cidade</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Complemento__c</fullName>
        <label>Complemento</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_DDD__c</fullName>
        <label>DDD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_DDI__c</fullName>
        <defaultValue>55</defaultValue>
        <label>DDI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Data_de_Admissao__c</fullName>
        <label>Data de Admissão</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_de_demissao__c</fullName>
        <label>Data de demissão</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_de_emissao__c</fullName>
        <label>Data de emissão</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Estado_civil__c</fullName>
        <label>Estado civil</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Solteiro(a)</fullName>
                </value>
                <value>
                    <fullName>Casado(a)</fullName>
                </value>
                <value>
                    <fullName>Viúvo(a)</fullName>
                </value>
                <value>
                    <fullName>Divorciado(a)</fullName>
                </value>
                <value>
                    <fullName>União estável</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Grau_de_instrucao__c</fullName>
        <label>Grau de instrução</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fundamental - Completo</fullName>
                </value>
                <value>
                    <fullName>Médio - Incompleto</fullName>
                </value>
                <value>
                    <fullName>Médio - Completo</fullName>
                </value>
                <value>
                    <fullName>Superior - Incompleto</fullName>
                </value>
                <value>
                    <fullName>Superior - Completo</fullName>
                </value>
                <value>
                    <fullName>Pós-graduação - Incompleto</fullName>
                </value>
                <value>
                    <fullName>Pós-graduação - Completo</fullName>
                </value>
                <value>
                    <fullName>Mestrado - Incompleto</fullName>
                </value>
                <value>
                    <fullName>Mestrado - Completo</fullName>
                </value>
                <value>
                    <fullName>Doutorado - Incompleto</fullName>
                </value>
                <value>
                    <fullName>Doutorado - Completo</fullName>
                </value>
                <value>
                    <fullName>Fundamental - Incompleto</fullName>
                    <isActive>false</isActive>
                    <label>Fundamental - Incompleto</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_ID_Externo__c</fullName>
        <externalId>true</externalId>
        <label>ID Externo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Identidade__c</fullName>
        <label>Identidade</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Lugradouro__c</fullName>
        <label>Lugradouro</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Nacionalidade__c</fullName>
        <label>Nacionalidade</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Naturalidade__c</fullName>
        <label>Naturalidade</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Numero__c</fullName>
        <label>Número</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Orgao_Emissor__c</fullName>
        <label>Órgão Emissor</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Origem__c</fullName>
        <label>Origem</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fraldário</fullName>
                </value>
                <value>
                    <fullName>Concierge</fullName>
                </value>
                <value>
                    <fullName>WIFI</fullName>
                </value>
                <value>
                    <fullName>Telefone</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Whatsapp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Pais__c</fullName>
        <label>País</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afeganistão</fullName>
                </value>
                <value>
                    <fullName>África do Sul</fullName>
                </value>
                <value>
                    <fullName>Albânia</fullName>
                </value>
                <value>
                    <fullName>Alemanha</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antiga e Barbuda</fullName>
                </value>
                <value>
                    <fullName>Arábia Saudita</fullName>
                </value>
                <value>
                    <fullName>Argélia</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Arménia</fullName>
                </value>
                <value>
                    <fullName>Austrália</fullName>
                </value>
                <value>
                    <fullName>Áustria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijão</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bangladexe</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Barém</fullName>
                </value>
                <value>
                    <fullName>Bélgica</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benim</fullName>
                </value>
                <value>
                    <fullName>Bielorrússia</fullName>
                </value>
                <value>
                    <fullName>Bolívia</fullName>
                </value>
                <value>
                    <fullName>Bósnia e Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botsuana</fullName>
                </value>
                <value>
                    <fullName>Brasil</fullName>
                    <default>true</default>
                    <label>Brasil</label>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgária</fullName>
                </value>
                <value>
                    <fullName>Burquina Faso</fullName>
                </value>
                <value>
                    <fullName>Burúndi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Parentesco__c</fullName>
        <label>Parentesco</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Filho(a)</fullName>
                </value>
                <value>
                    <fullName>Neto(a)</fullName>
                </value>
                <value>
                    <fullName>Sobrinho(a)</fullName>
                </value>
                <value>
                    <fullName>Primo(a)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Preferencia_de_Contato__c</fullName>
        <label>Preferência de Contato</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Telefone</fullName>
                </value>
                <value>
                    <fullName>Correspondência</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Profissao__c</fullName>
        <label>Profissão</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Relacionamento__c</fullName>
        <label>Relacionamento</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_SGL_Shopping__c</fullName>
        <formula>Account.TW1_Shopping__r.TW1_SGL_Empreendimento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SGL Shopping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Sexo__c</fullName>
        <label>Sexo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Masculino</fullName>
                </value>
                <value>
                    <fullName>Feminino</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Shopping__c</fullName>
        <label>Shopping</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Sobrenome__c</fullName>
        <label>Sobrenome</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_UF__c</fullName>
        <label>UF</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>CE</fullName>
                </value>
                <value>
                    <fullName>DF</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>GO</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MG</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>PB</fullName>
                </value>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>PI</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>RJ</fullName>
                </value>
                <value>
                    <fullName>RN</fullName>
                </value>
                <value>
                    <fullName>RO</fullName>
                </value>
                <value>
                    <fullName>RR</fullName>
                </value>
                <value>
                    <fullName>RS</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>TO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_UF_de_emissao__c</fullName>
        <label>UF de emissão</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>CE</fullName>
                </value>
                <value>
                    <fullName>DF</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>GO</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MG</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>PB</fullName>
                </value>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>PI</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>RJ</fullName>
                </value>
                <value>
                    <fullName>RN</fullName>
                </value>
                <value>
                    <fullName>RO</fullName>
                </value>
                <value>
                    <fullName>RR</fullName>
                </value>
                <value>
                    <fullName>RS</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>TO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>Executivos</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.TW1_Executivo_de_vendas</value>
        </filters>
        <label>Executivos</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Funcion_rios</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.TW1_Cadastro_Func</value>
        </filters>
        <label>Funcionários</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Meus Contatos</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>TW1_Assistente_de_comercializacao</fullName>
        <active>true</active>
        <description>Utilizar este tipo de registro para cadastrar os assistentes comerciais.</description>
        <label>Assistente de comercialização</label>
    </recordTypes>
    <recordTypes>
        <fullName>TW1_Cadastro_Func</fullName>
        <active>true</active>
        <label>Cadastro de Funcionário</label>
    </recordTypes>
    <recordTypes>
        <fullName>TW1_Cadastro_de_Dependente</fullName>
        <active>false</active>
        <label>Cadastro de Dependente</label>
    </recordTypes>
    <recordTypes>
        <fullName>TW1_Contato</fullName>
        <active>true</active>
        <label>Contato</label>
    </recordTypes>
    <recordTypes>
        <fullName>TW1_Executivo_de_vendas</fullName>
        <active>true</active>
        <description>Utilizar este tipo de registro para cadastrar os executivos de vendas.</description>
        <label>Executivo de vendas</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>